<resources>
  <string name="app_name">CaperPriceChecker</string>
  <string name="remove">Remove</string>
  <string name="_2_00">$2.00</string>
  <string name="add_item">addItem</string>
  <string name="cart_item">Cart Items</string>
  <string name="total">Total</string>
  <string name="item_name">Product Name</string>
  <string name="item_price">Product Price</string>
  <string name="add_product">Add Product</string>
</resources>