<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/etProductName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/item_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/etProductPrice"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="18dp"
      android:inputType="number"
      android:hint="@string/item_price"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/etProductName" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/addContact"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="24dp"
      android:text="@string/add_product"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      android:textSize="12sp"
      app:cornerRadius="20dp"
      app:iconGravity="textEnd"
      app:iconSize="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etProductPrice" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>