<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="com.raju.caperpricechecker.ui.activity.MainViewModel" />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
      android:id="@+id/nestedDetail"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/checkout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="32dp"
          android:text="@string/cart_item"
          android:textColor="@color/black"
          android:textSize="24sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <View
          android:id="@+id/divider"
          android:layout_width="0dp"
          android:layout_height="0.5dp"
          android:layout_marginTop="20dp"
          android:background="@color/gray_17pc"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/checkout" />

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/cart_products"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:clipToPadding="false"
          android:orientation="vertical"
          android:padding="8dp"
          app:adapter="@{viewModel.adapterObservableField}"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          app:layout_behavior="@string/appbar_scrolling_view_behavior"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/divider"
          tools:listitem="@layout/item_view_layout" />

        <View
          android:id="@+id/divider_one"
          android:layout_width="0dp"
          android:layout_height="0.5dp"
          android:background="@color/gray_17pc"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/cart_products" />

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/total_price_text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="12dp"
          android:text="@string/total"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/divider_one" />

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/total_price"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:layout_marginEnd="32dp"
          android:text="@{viewModel.totalPrice}"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/divider_one" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/btnAdd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:contentDescription="@string/add_item"
      android:src="@drawable/ic_baseline_add_24"
      app:layout_anchor="@id/nestedDetail"
      app:layout_anchorGravity="bottom|end" />
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>